Wed Dec 11 22:43:59 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/convert.c: add some TODO for overflow check

Wed Dec 11 14:52:32 EST 2002	JK Lowden <jklowden@schemamania.org>
	* include/cspublic.h src/ctlib/ct.c added framework for ct_options

Wed Dec 11 11:54:23 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/cspublic.h src/ctlib/ct.c src/tds/read.c:
	- cleanup removing errors compiling with a C++ compiler
	
Tue Dec 10 17:04:41 EST 2002	JK Lowden <jklowden@schemamania.org>
	* include/sybdb.h src/dblib/dblib.c added dbsetmaxprocs
	* doc/dblib_errors.txt new file

Tue Dec 10 20:58:29 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/login.c: fix connection timeout handling

Tue Dec 10 17:58:24 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/challenge.c src/tds/config.c:
	* src/tds/convert.c src/tds/iconv.c src/tds/locale.c:
	* src/tds/login.c src/tds/mem.c src/tds/read.c:
	* src/tds/tdsstring.c src/tds/token.c src/tds/util.c:
	* src/tds/vstrbuild.c src/tds/write.c:
	- cleanup removing errors compiling with a C++ compiler

Mon Dec  9 22:15:17 EST 2002	JK Lowden <jklowden@schemamania.org>
	* TODO minor update
	* configure.in added test for libgen.h
	* src/dblib/unittests/common.c src/dblib/unittests/common.h better messages
	* src/dblib/unittests/t0001.c
	- accept optional servername & timeout parameters (to test dbsetlogintime)
	* src/tds/login.c fixed connect timeout logic
	- dbsetlogintime() works

Mon Dec  9 17:22:26 EST 2002 	JK Lowden <jklowden@schemamania.org>
	* include/tds.h src/dblib/dblib.c src/dblib/unittests/t0001.c src/tds/login.c
	- support for dbsetlogintime (not yet working)

Mon Dec 09 21:48:28 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* doc/api_status.txt src/odbc/odbc.c:
	- update odbc status

Mon Dec  9 12:40:48 EST 2002	JK Lowden <jklowden@schemamania.org>
	* doc/api_status.txt	added perl to output bcp-ready format
	* src/tds/login.c 	added TDS version to log file
